k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coursebench-app
  namespace: coursebench
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: coursebench-app
  template:
    metadata:
      labels:
        app: coursebench-app
    spec:
      containers:
        - name: app
          image: reg.geekpie.club/proxy/ghcr.io/shanghaitechgeekpie/coursebench-next:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /healthz
              port: 3000
            failureThreshold: 10
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /healthz?ready
              port: 3000
            periodSeconds: 10
            timeoutSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: coursebench-app
  namespace: coursebench
spec:
  selector:
    app: coursebench-app
  ports:
    - port: 80
      targetPort: 3000
